Updated smem to be sdmem like it is on Debian. smem conflicts with another package binary on Debian and Fedora

--- a/smem.1
+++ b/smem.1
@@ -3,16 +3,16 @@
 .if n .sp
 .if t .sp 0.4
 ..
-.TH SMEM 1
+.TH SDMEM 1
 
 .SH NAME
-smem \- secure memory wiper (secure_deletion toolkit)
+sdmem \- secure memory wiper (secure_deletion toolkit)
 
 .SH SYNOPSIS
-.B smem [-f] [-l] [-l] [-v]
+.B sdmem [-f] [-l] [-l] [-v]
 
 .SH DESCRIPTION
-.I smem
+.I sdmem
 is designed to delete data which may lie still in your memory (RAM)
 in a secure manner which can not be recovered by thiefs, law enforcement
 or other threats.
@@ -24,7 +24,7 @@ Symposium by Peter Gutmann, one of the leading civilian cryptographers.
 .PP
 The
 .I secure data deletion
-process of smem goes like this:
+process of sdmem goes like this:
 .PP
 .TP
 .B *
@@ -61,10 +61,10 @@ verbose mode
 .SH BEWARE
 .TP
 .B SLOW
-Wiping the memory is very slow. You might use smem with the -ll option. (tip)
+Wiping the memory is very slow. You might use sdmem with the -ll option. (tip)
 .TP
 .B BETA!
-.I smem
+.I sdmem
 is still beta.
 
 .PP
@@ -84,7 +84,7 @@ The newest version of the
 can be obtained from 
 .I http://www.thc.org
 .Sp
-.I smem
+.I sdmem
 and the
 .I secure_deletion package
 is (C) 1997-2003 by van Hauser / THC (vh@thc.org)
